<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/r_edit_column_margin"
            android:text="@string/http"/>

        <EditText
            android:id="@+id/et_radio_address"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="Address"
            />
        <ImageButton
            android:id="@+id/ib_radio_preload"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_play_circle_outline_black_48dp"
            android:scaleType="centerCrop"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/r_edit_column_margin"
            android:text="@string/channel_name" />

        <EditText
            android:id="@+id/et_radio_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="Name"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/r_edit_column_margin"
            android:text="@string/create"/>

        <Spinner
            android:id="@+id/et_radio_spinner"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/r_edit_column_margin"
            android:text="@string/description" />

        <EditText
            android:id="@+id/et_radio_desc"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:hint="Description"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/r_edit_column_margin"
            android:text="@string/clock" />


        <Spinner
            android:id="@+id/et_radio_h_clock"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/hours"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/et_radio_m_clock"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/minutes"
            android:textAlignment="center" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:gravity="center"-->
    <!--&gt;-->
    <!--<Button-->
    <!--android:id="@+id/button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/action_cancel" />-->

    <!--<Button-->
    <!--android:id="@+id/button2"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/action_save" />-->
    <!--</LinearLayout>-->
</LinearLayout>